--- a/OCBJackpotHub/OCBJackpotHub/packages.config
+++ b/OCBJackpotHub/OCBJackpotHub/packages.config
@@ -3,6 +3,14 @@
   <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.SelfHost" version="2.4.1" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="2.1.1" targetFramework="net472" />
+  <package id="Microsoft.Identity.Client" version="4.21.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.8.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.8.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.8.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.8.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.8.0" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Cors" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Diagnostics" version="2.1.0" targetFramework="net472" />
@@ -12,4 +20,5 @@
   <package id="Microsoft.Owin.SelfHost" version="2.1.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.8.0" targetFramework="net472" />
 </packages>
