--- a/OCBJackpotHub/WebApp/Web.config
+++ b/OCBJackpotHub/WebApp/Web.config
@@ -4,9 +4,15 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+   
   <configSections>
+    
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
+  <connectionStrings>
+    <add name="xls" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=Sample1.xls;Extended Properties=Excel 8.0" />
+    <add name="xlsx" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=F:\workspace\git\vongquaytatnien\OCBJackpotHub\WebApp\datanumber.xlsx;Extended Properties=Excel 12.0" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
@@ -33,7 +39,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <connectionStrings>
-    <add name="dataContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Database.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <appSettings>
+    <!--The license context used-->
+    <add key="EPPlus:ExcelPackage.LicenseContext" value="NonCommercial" />
+  </appSettings>
 </configuration>
