--- a/OCBJackpotHub/WebApp/packages.config
+++ b/OCBJackpotHub/WebApp/packages.config
@@ -1,15 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="5.5.0" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.3.6" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
 </packages>
