--- a/OCBJackpotHub/WebApp/WebApp.csproj
+++ b/OCBJackpotHub/WebApp/WebApp.csproj
@@ -136,6 +136,10 @@
     <Content Include="img\watch.png" />
     <Content Include="control.html" />
     <Content Include="Index.html" />
+    <Content Include="js\slotmachine.js" />
+    <Content Include="js\slotmachine.min.js" />
+    <Content Include="ringtones\ding.wav" />
+    <Content Include="ringtones\spinning.mp3" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
@@ -150,6 +154,7 @@
     <Compile Include="Model\LuckyNumber.cs" />
     <Compile Include="MyHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
