--- a/OCBJackpotHub/WebApp/bin/WebApp.dll.config
+++ b/OCBJackpotHub/WebApp/bin/WebApp.dll.config
@@ -11,7 +11,7 @@
   </configSections>
   <connectionStrings>
     <add name="xls" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=D:\WorkSpace\Project Outsource\slotmachine\vongquaytatnien\OCBJackpotHub\WebApp\dataNumber.xls;Extended Properties=Excel 8.0" />
-    <add name="xlsx" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=F:\workspace\git\vongquaytatnien\OCBJackpotHub\WebApp\dataNumber.xlsx;Extended Properties=Excel 12.0" />
+    <add name="xlsx" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=D:\WorkSpace\Project Outsource\slotmachine\vongquaytatnien\OCBJackpotHub\WebApp\dataNumber.xlsx;Extended Properties=Excel 12.0" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
