--- a/OCBJackpotHub/WebApp/WebApp.csproj
+++ b/OCBJackpotHub/WebApp/WebApp.csproj
@@ -111,6 +111,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\Result.xml" />
+    <Content Include="img\bg-button.png" />
+    <Content Include="img\button.png" />
     <Content Include="img\machine.psd" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="dist\jquery.slotmachine.css" />
@@ -120,22 +122,7 @@
     <Content Include="dist\slotmachine.js" />
     <Content Include="dist\slotmachine.min.js" />
     <Content Include="img\bg.jpg" />
-    <Content Include="img\cookie.png" />
-    <Content Include="img\food1.jpg" />
-    <Content Include="img\food2.jpg" />
-    <Content Include="img\food3.jpg" />
-    <Content Include="img\machine.png" />
     <Content Include="img\person.png" />
-    <Content Include="img\plane.png" />
-    <Content Include="img\slot-machine.gif" />
-    <Content Include="img\slot1.png" />
-    <Content Include="img\slot2.png" />
-    <Content Include="img\slot3.png" />
-    <Content Include="img\slot4.png" />
-    <Content Include="img\slot5.png" />
-    <Content Include="img\slot6.png" />
-    <Content Include="img\triky.jpg" />
-    <Content Include="img\watch.png" />
     <Content Include="control.html" />
     <Content Include="Index.html" />
     <Content Include="js\jquery.fireworks.js" />
