--- a/OCBJackpotHub/WebApp/WebApp.csproj
+++ b/OCBJackpotHub/WebApp/WebApp.csproj
@@ -111,9 +111,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Data\Result.xml" />
+    <Content Include="favicon.ico" />
+    <Content Include="img\app.png" />
     <Content Include="img\bg-button.png" />
+    <Content Include="img\bgpopup.png" />
     <Content Include="img\button.png" />
+    <Content Include="img\congrat.gif" />
+    <Content Include="img\intro.mp4" />
+    <Content Include="img\khungquay.png" />
+    <Content Include="img\LOGO.png" />
     <Content Include="img\machine.psd" />
+    <Content Include="img\khung quay so.psd" />
+    <Content Include="img\bg.psd" />
+    <Content Include="dataNumber.xlsx" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="dist\jquery.slotmachine.css" />
     <Content Include="dist\jquery.slotmachine.js" />
@@ -124,6 +134,10 @@
     <Content Include="img\bg.jpg" />
     <Content Include="img\person.png" />
     <Content Include="control.html" />
+    <Content Include="img\phone-omni.png" />
+    <Content Include="img\phone.psd" />
+    <Content Include="img\popup.psd" />
+    <Content Include="img\top-logo.png" />
     <Content Include="Index.html" />
     <Content Include="js\jquery.fireworks.js" />
     <Content Include="js\slotmachine.js" />
