--- a/OCBJackpotHub/WebApp/WebApp.csproj
+++ b/OCBJackpotHub/WebApp/WebApp.csproj
@@ -110,6 +110,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Data\log.txt" />
     <Content Include="img\bgwelcome.jpg" />
     <Content Include="img\logo-full.png" />
     <Content Include="js\jquery-3.4.1.min.js" />
